--- a/training-app/pom.xml
+++ b/training-app/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>cz.prague.vida</groupId>
-  <artifactId>training-app-web</artifactId>
+  <artifactId>training-app</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
   <dependencies>
@@ -43,7 +43,7 @@
     <dependency>
       <groupId>org.primefaces</groupId>
       <artifactId>primefaces</artifactId>
-      <version>5.1</version>
+      <version>8.0</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish</groupId>
