--- a/training-app/src/main/webapp/WEB-INF/web.xml
+++ b/training-app/src/main/webapp/WEB-INF/web.xml
@@ -36,4 +36,8 @@
 		<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>nova-dark</param-value>
+	</context-param>
 </web-app>
