run with tomcat

--- a/training-app/src/main/webapp/WEB-INF/web.xml
+++ b/training-app/src/main/webapp/WEB-INF/web.xml
@@ -21,9 +21,6 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-	<listener>
-		<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
-	</listener>
 	<context-param>
 		<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
 		<param-value>0</param-value>
@@ -38,6 +35,6 @@
 	</context-param>
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>nova-dark</param-value>
+		<param-value>omega</param-value>
 	</context-param>
 </web-app>
